fix issues identified by intellij